Add margin notes for Massachusetts, Michigan, Nevada, Oregon, and a general overview for Washington; introduce METRC deep dives on data sovereignty, multi-state compliance ambiguities, and shadow inventory gaps; create product previews for LOTL samples, regulatory playbooks, and state coverage matrix; establish purchase links for various bundles.

--- a/.gitignore
+++ b/.gitignore
@@ -9,9 +9,18 @@ docs/ORA-Reports/
 # docs/Penumbrant-One-Pagers/
 # docs/ORA-Leaflets/
 
+# Private methodology cache
+clearline-regulatory-intelligence/methodology/
+
+# Local 10.1_PLK working directory
+10.1_PLK/
+
 # System files
 .DS_Store
 Thumbs.db
+
+# PENpoints preview (work in progress)
+clearline-regulatory-intelligence/product-previews/PENpoints_deep_dives_preview.md
 
 # Editor files
 *.swp
