Add pending purchase links to .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -22,6 +22,9 @@ Thumbs.db
 # PENpoints preview (work in progress)
 clearline-regulatory-intelligence/product-previews/PENpoints_deep_dives_preview.md
 
+# Pending purchase links
+clearline-regulatory-intelligence/D__purchase/
+
 # Editor files
 *.swp
 *.swo
